# final-project-federated-learning

./: .gitignore  Taskfile.yaml  devbox.json
0-raw-data/01-motor-imaginery/: data_fetcher.py  prepare_data.py
0-raw-data/motor-imaginary/: data_fetcher.py
1-data-cleaning-pipelines/motor-imaginary/: centralize_test_data_cleaner.py  centralize_test_data_pipeline_poc.ipynb  centralize_train_data_cleaner.py  centralize_train_data_pipeline_poc.ipynb  data_analysis.ipynb  test_centralize_data_pipeline.ipynb  test_centralize_train_data_pipeline.ipynb
1-data-cleaning-pipelines/motor-imaginary-data-cleaning-pipeline/: centralize_train_data_cleaner.py  centralize_train_data_pipeline_poc.ipynb  data_analysis.ipynb  test_centralize_train_data_pipeline.ipynb
2-models/: eegnet_pytorch.py
2-models/eegnet-model-pytorch/: model_poc.ipynb
3-centralized-trainings/: Taskfile.yaml  motor_imaginery_eegnet.ipynb
4-federated-local-trainings/: Taskfile.yaml  motor_imaginary_data_splitter.py
4-federated-local-trainings/flower-version-1/: .gitignore  Dockerfile  README.md  SuperExec.Dockerfile  docker-compose.yaml  final_model.pt  pyproject.toml  requirements.runtime.txt
4-federated-local-trainings/flower-version-1/flower_version_1/: __init__.py  client_app.py  custom_aggregration_fn.py  log_printer.py  motor_imaginary_data_cleaner.py  motor_imaginary_train_data_cleaner.py  server_app.py  task.py
5-federated-mock-distributed-trainings/flower-version-1-kubernetes/: Deployment.clientapp-0.yaml  Deployment.clientapp-1.yaml  Deployment.serverapp.yaml  Deployment.superlink.yaml  Deployment.supernode-0.yaml  Deployment.supernode-1.yaml  Namespace.flwr.yaml  PV.data-1.yaml  PV.data-2.yaml  PVC.data-1.yaml  PVC.data-2.yaml  Service.superlink.yaml  Service.supernode-0.yaml  Service.supernode-1.yaml  kustomization.yaml
5-federated-mock-distributed-trainings/flower-version-1-kubernetes/log-gateway/: Dockerfile  requirements.txt
5-federated-mock-distributed-trainings/installation-and-setup/: kind-config.yaml
5-federated-mock-distributed-trainings/monitoring-kubernetes/: Values.alloy.yaml  Values.kube-prometheus-stack.yaml  Values.loki.yaml
test-grafana-prom/ml-federated-client/: Dockerfile  train.py
test-grafana-prom/monitoring/: Deployment.fl-client-a.yaml  Deployment.fl-client-b.yaml  Deployment.fl-client-c.yaml  Values.alloy.yaml  Values.kube-prometheus-stack.yaml  Values.loki.yaml
(+1 files in other folders)
