[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-version-1"
version = "1.0.0"
description = "Federated EEG motor imagery client/server (Flower)"
license = "Apache-2.0"

dependencies = [
  # Flower runtime (ClientApp / ServerApp / superexec / Ray sim)
  "flwr[simulation]>=1.22.0",

  # Core ML stack
  "torch==2.2.2",        # CPU build works on python:3.11-slim
  "numpy>=2.3.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.4.0",

  # EEG processing
  "mne>=1.7.0",

]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.components]
serverapp = "flower_version_1.server_app:app"
clientapp = "flower_version_1.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 1.0
lr = 0.001
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 9

[tool.flwr.federations.local-deployment]
address = "localhost:9093"
insecure = true

[tool.flwr.federations.remote-federation]
address = "localhost:9093"
insecure = true
# root-certificates = "<PATH/TO/ca.crt>"
